--- a/MSAEmotions/MSAEmotions/MSAEmotions/MSAEmotions.csproj
+++ b/MSAEmotions/MSAEmotions/MSAEmotions/MSAEmotions.csproj
@@ -41,7 +41,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Model\RecentSpellChecks.cs" />
+    <Compile Include="Model\EmotionTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EasyTablesBackend.cs" />
     <Compile Include="View\EmotionsPage.xaml.cs">
